se borro el achivo pesado de .sqlite y se dejaron los archivos .cvs para leer. También se esta probando que la carga al github sea correcta

--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -7,12 +7,14 @@
    "outputs": [],
    "source": [
     "import sqlite3\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os\n",
+    "from tabulate import tabulate # para ver mejor las filas y columnas cuando hagamos el head de cada tabla.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,17 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Conectar a la base de datos\n",
-    "conexion = sqlite3.connect(ruta_db)"
+    "conexion = sqlite3.connect(ruta_db)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,12 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convertir la lista de tablas en un formato legible\n",
-    "nombres_tablas = [tabla[0] for tabla in tablas]"
+    "nombres_tablas = [tabla[0] for tabla in tablas]\n"
    ]
   },
   {
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,16 +104,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hasta aca tengo guardados los csv. A partir de aca, leer los archivos cvs ya que voy a borrar el .sqlite porque es muy pesado y no sube al github."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "aircrafts_data = pd.read_csv(\"aircrafts_data.csv\")\n",
+    "airports_data = pd.read_csv(\"airports_data.csv\")\n",
+    "boarding_passes = pd.read_csv(\"boarding_passes.csv\")\n",
+    "bookings = pd.read_csv(\"bookings.csv\")\n",
+    "flights = pd.read_csv(\"flights.csv\")\n",
+    "seats = pd.read_csv(\"seats.csv\")\n",
+    "ticket_flights = pd.read_csv(\"ticket_flights.csv\")\n",
+    "tickets = pd.read_csv(\"tickets.csv\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -125,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
